--- a/Customer/Home.html
+++ b/Customer/Home.html
@@ -6,6 +6,6 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Welome To Feijip Enterprice</h1>
+    <header><h1>Welome To Feijip Enterprice</h1></header>
 </body>
 </html>
