--- a/Customer/Home.html
+++ b/Customer/Home.html
@@ -12,6 +12,7 @@
         <div class="sidebaricon" onclick="sidebar()">
             <i class="fas fa-bars"></i>
         </div>
+        <h1>Welcome To Feijip Enterprice</h1>
     </header>
 
     <div class="sidebar">
