--- a/Customer/Home.html
+++ b/Customer/Home.html
@@ -21,6 +21,7 @@
         </div>
         <a href="#">Home</a>
         <a href="#">Booking Appointment</a>
+        <a href="#">Setting</a>
         <a href="#">About Us</a>
     </div>
 
