--- a/Customer/Home.html
+++ b/Customer/Home.html
@@ -26,7 +26,7 @@
         </div>
         <nav>
             <ul>
-                <a href="#">Home</a>
+                <a href="Home.html">Home</a>
                 <a href="#">Booking Appointment</a>
                 <a href="#">Setting</a>
                 <a href="#">About Us</a>
